# conan-libjpeg

./: .travis.yml  CMakeLists.txt  README.md  build.py  conanfile.py
libjpeg/: CMakeLists.txt  jconfig.h  libjpeg-config.in  libjpeg.pc.in
test/: CMakeLists.txt  conanfile.py  rdjpgcom.c
